--- a/FlaskMarket/market/templates/register.html
+++ b/FlaskMarket/market/templates/register.html
@@ -3,7 +3,7 @@
 Register Page
 {% endblock %} 
 {% block content %}
-<body class="text-left">
+<body class="text-center">
     <div class="container">
 
         <form method="POST" class="form-register" style="color:white">
@@ -30,6 +30,12 @@ Register Page
             {{ form.submit(class="btn btn-lg btn-block btn-primary") }}
             <br>
         </form>
+
     </div>
 </body>
+<style>
+    form {
+    display: inline-block
+    }
+</style>
 {% endblock %} 
